Adding spring security with base auth to eureka service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,10 @@ eureka:
 logging:
     level.com.netflix.eureka: OFF
     level.com.netflix.discovery: OFF
+
+#Should be env property!!! This is just for simple example
+spring:
+    security:
+        user:
+            name: netflix
+            password: eureka
